--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 <!-- /Google Analytics -->
 
 
-  <section class="cid-rwKeAMeGId mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=i0RZ6STsgjY" id="header2-1">
+  <section class="cid-rwKeAMeGId mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);"></div>
+    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(35, 35, 35);"></div>
 
     <div class="container align-center">
         <div class="row justify-content-md-center">
@@ -62,7 +62,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="mbr-section content4 cid-rwKhoiOto7" id="content4-3">
+<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section class="mbr-section content4 cid-rwKhoiOto7" id="content4-3">
 
     
 
@@ -237,9 +237,8 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/index.js"></script>
   <script src="assets/slick.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
