--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="icon" type="image/png" href="images/favicon_wavex.png">
-<title>WaveX</title>
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="images//favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images//favicon-16x16.png">
+<title>NotyNote Funland</title>
 <link href="css/CornflowerBlue.css" rel="stylesheet" id="color" type="text/css" />
 <link rel="stylesheet" href="css/wavex.css">
 <link rel="stylesheet" href="fonts/web-fonts.css">
@@ -209,10 +211,6 @@
                             <p>Hey internet!! Nice to meet you all :D. I am a Information Technology student at Stamford International University and the Co-Owner of Nawee Taweechote. Never heard of Nawee Taweechote? It just my hobby job that keep me fed and alive monthy. But I guess you not here for that hobby job of mine are you? Nahh you not.</p>
                             <p>Let's get into business $$. I'm a wannabe programmer that can fulfill your dream of having a website, andriod app, and your very own futuritic mirror! So...... yeah hire me please!</p>
                             <div class="social-icons">
-                              <a href="https://www.facebook.com/notynote" target="_blank" class="fb animate bounceIn" data-delay="1400"><i class="fa fa-facebook"></i></a> 
-                              <a href="https://github.com/notynote" target="_blank" class="tw animate bounceIn" data-delay="1400"><i class="fa fa-github"></i></a> 
-                              <a href="https://www.instagram.com/notynote/" target="_blank" class="ig animate bounceIn" data-delay="1400"><i class="fa fa-instagram"></i></a> 
-                              <a href="https://www.youtube.com/theempchannel" target="_blank" class="yt animate bounceIn" data-delay="1400"><i class="fa fa-youtube"></i></a>
                             </div>
                         </div>
                    <div class="clearfix"></div>
